Fixed animation clipping for zoom effect in game index views.

--- a/app/assets/stylesheets/components/game-index.scss
+++ b/app/assets/stylesheets/components/game-index.scss
@@ -86,10 +86,14 @@
 .game-index-container .game-list-item:hover, .dropdown-open {
   transform: scale(1.02);
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 2px 2px -2px rgba(0,0,0,.02),0 1px 4px 0 rgba(0,0,0,.08);
-  z-index: 1;
+  position: relative;
   .collection-button-dropdown {
     z-index: 20;
   }
+}
+
+.dropdown-open {
+  z-index: 2;
 }
 
 .game-index-container .collection-button {
